--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/cs8 flower icon.ico">
+  <meta name="description" content="Hello! My name is Vera Pham, welcome to my portfolio! You'll find my Linkedin, Twitter, email and more ways to contact me through this site. I hope you enjoy your stay here and I am looking forward to hearing back from you. ">
+  <meta name="author" content="862283039">
 
-  <title>John Doe - Business Administration</title>
+  <title>Vera Pham - Business Accounting</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Vera Pham</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/verapham.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Vera Pham
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Accounting 📚</div>
+        <p class="lead mb-4">Hello! My name is Vera Pham and I am currently a second year undergraduate student at the University of California, Riverside. Currently, I am pursuing a bachelors in accounting and have two more years of studying until my graduation date. I enjoy journaling and listening to music in my free time. Recently, I have been listening to a lot of CCM and jazz. I have two family pets, one is a shiba inu and the other is a husky/poodle mix. Our shiba inu’s name is Mika and she is shy around strangers. She likes to sleep a lot and go on walks. Our husky/poodle mix is named Cooper and he is very outgoing around strangers. He does not bite but he has lots of youthful energy and loves to play with people. Although they may seem very different from each other, they balance one another out well. I believe I keep to myself more but enjoy taking walks outside because it is relaxing for me. At the moment, I am involved in this Christian fellowship on campus called Asian American Christian Fellowship. It has been a very enjoyable experience so far and I am thankful to have a community of sisters and brothers to encourage one another in our walks with Him. As a college student, there are lots of responsibilities and personal events, but glory to God for allowing me to run to Him as my fortress and deliverer. Those are some personal facts about me, if there is any more you would like to speak about feel free to contact me. Going forward, although I have not had any professional experience inclusive to accounting yet, here are some of my leadership involvements and other work exposures.<br><br>
 
-        Enter bio here<br><br>
+        I have worked as an inventory clerk at Hirel Connectors, an engineering company focused on manufacturing parts for the governments’ space programs. It is based in Claremont and has its own labs and warehouses. Through working here, I have honed my organization and communication skills. On a daily basis, I recorded over 2,000 lines of items and carefully cleaned the manufacturing parts. The environment is very friendly and professional, and I would recommend working there if you need a starting engineering job. The company is still running and looking for new inventory clerks.<br><br>
 
-        Enter bio here
+        Lastly, I am leading as a musical group leader at Belvedere Alliance Church. It has been a little over two years and through this experience, it has helped me learn the importance of what it means to be a leader and a good listener. Every three weeks, I carefully compile a list of worship songs for that Sunday and spend a few hours practicing the songs with my team. It has been a humbling experience and joy being able to fellowship with my sisters and brothers in Christ and praise the Lord for who He is. The instruments I play include the guitar, keyboard and vocals. This experience has also helped me grow in faith and perseverance, because I have been serving for over a few years. Thank you for taking the time to read through this portfolio! If you have any questions, comments or concerns, feel free to contact me.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://biblehub.com/john/14-6.htm">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/vpham075">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.biblegateway.com/passage/?search=Romans%208%3A38-39&version=NIV">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.biblegateway.com/passage/?search=1%20Corinthians%2011%3A27-29&version=NIV">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,30 +92,31 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Inventory Clerk</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Hirel Connectors</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Cleaned, compiled and maintained records of quantity, type, and value of material equipment, merchandise, and supplies stocked in the warehouse<br> 
+              • Completed physical inventories maintaining an 99% accuracy rate of over 2,000 line items before end-of-month deadlines<br>
+              • Promptly communicated with staff members on matters relating to inventory records and data<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2022 - August 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">UC Riverside Dining Services</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Promptly resolved complaints by communicating effectively with a member of the management team<br>
+              • Carefully maintained sanitation, health and safety standards in all work areas<br>
+              • Professional and polite customer service to customers during six hour shifts</br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Sept. 2021 - Oct. 2021</span>
           </div>
         </div>
 
@@ -123,17 +124,16 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Belvedere Alliance Church</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Oversaw and assisted in leading children during weekly Sunday school classes for ages 4 to 10 through preparing engaging lesson plans for over 20 children.<br>
+            • Engaged with an average of 20 students during Sunday school class to create interactive and welcoming environment<br>
+            • Led in the start of Belvedere's Vacation Bible School for kids ages 4 - 16 by planning decorative props for an interactive environment and led discussion groups of five children
+<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2014 - June 2016</span>
           </div>
         </div>
 
@@ -152,33 +152,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business Accounting</div>
+            <div>Currently in progress</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - June 2025</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Business Accounting</div>
+            <div>Major: Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2021 - June 2025</span>
           </div>
         </div>
 
@@ -189,17 +178,20 @@
 
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<h2 class="mb-5">Portfolio</h1>
+<center>
+    <img src="img/cs 8 img 1.jpeg" width="500px">
+    <img src="img/cs 8 img 2.jpeg" width="500px"><br>
+    <img src="img/cs 8 img 3.jpeg" width="500px">
+    <img src="img/cs 8 img 4.jpeg" width="500px"><br>
+</center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Vera Pham</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
